[package]
name = "scarab-derive"
version = "0.1.0"
authors = ["l1h3r <devin.turner09@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }

[features]
extra-traits = ["syn/extra-traits"]
